--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "auth0-js": "^9.12.2",
+    "axios": "^0.19.2",
+    "jwt-decode": "^2.2.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
